[gd_scene format=3 uid="uid://fhm3x6nwgara"]

[ext_resource type="Script" uid="uid://b23vkoymyk6tq" path="res://editor/ui/province_editor.gd" id="1_yb7ut"]

[node name="ProvinceEditor" type="CanvasLayer" unique_id=1907813086]
script = ExtResource("1_yb7ut")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=9685244]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -38.0
offset_right = 300.0
offset_bottom = 39.0
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer" unique_id=1085986008]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PanelContainer/GridContainer" unique_id=1036054035]
layout_mode = 2
text = "Province Id: "

[node name="LabelProvinceID" type="Label" parent="PanelContainer/GridContainer" unique_id=355504476]
layout_mode = 2

[node name="Label3" type="Label" parent="PanelContainer/GridContainer" unique_id=1795303336]
layout_mode = 2
text = "Province Color"

[node name="ColorPickerProvinceColor" type="ColorPickerButton" parent="PanelContainer/GridContainer" unique_id=80764928]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelProvinceType" type="Label" parent="PanelContainer/GridContainer" unique_id=30630323]
layout_mode = 2
text = "Province Type"

[node name="OBProvinceType" type="OptionButton" parent="PanelContainer/GridContainer" unique_id=1769255039]
layout_mode = 2

[node name="LabelProvinceOwner" type="Label" parent="PanelContainer/GridContainer" unique_id=914180718]
layout_mode = 2
text = "Owner"

[node name="OBProvinceOwner" type="OptionButton" parent="PanelContainer/GridContainer" unique_id=1615870089]
layout_mode = 2

[node name="LabelProvinceController" type="Label" parent="PanelContainer/GridContainer" unique_id=1524076642]
layout_mode = 2
text = "Controller"

[node name="OBProvinceController" type="OptionButton" parent="PanelContainer/GridContainer" unique_id=2067000131]
layout_mode = 2

[node name="LabelTerritoryOwner" type="Label" parent="PanelContainer/GridContainer" unique_id=1693257800]
layout_mode = 2
text = "Territory Owner"

[node name="OBTerritoryOwner" type="OptionButton" parent="PanelContainer/GridContainer" unique_id=246299723]
layout_mode = 2

[node name="LabelTerritoryController" type="Label" parent="PanelContainer/GridContainer" unique_id=1768499235]
layout_mode = 2
text = "Territory Controller"

[node name="OBTerritoryController" type="OptionButton" parent="PanelContainer/GridContainer" unique_id=603762964]
layout_mode = 2

[node name="LabelTerritory" type="Label" parent="PanelContainer/GridContainer" unique_id=2146071504]
layout_mode = 2
text = "Territory"

[node name="OBTerritory" type="OptionButton" parent="PanelContainer/GridContainer" unique_id=477750683]
layout_mode = 2

[node name="Label8" type="Label" parent="PanelContainer/GridContainer" unique_id=727817862]
layout_mode = 2
text = "Position"

[node name="LabelPosition" type="Label" parent="PanelContainer/GridContainer" unique_id=968576644]
layout_mode = 2

[node name="ButtonGenPRV" type="Button" parent="PanelContainer/GridContainer" unique_id=1900475102]
layout_mode = 2
text = "Generate Province History"

[connection signal="item_selected" from="PanelContainer/GridContainer/OBProvinceType" to="." method="_on_ob_province_type_item_selected"]
[connection signal="item_selected" from="PanelContainer/GridContainer/OBProvinceOwner" to="." method="_on_ob_province_owner_item_selected"]
[connection signal="item_selected" from="PanelContainer/GridContainer/OBProvinceController" to="." method="_on_ob_province_controller_item_selected"]
[connection signal="item_selected" from="PanelContainer/GridContainer/OBTerritoryOwner" to="." method="_on_ob_territory_owner_item_selected"]
[connection signal="item_selected" from="PanelContainer/GridContainer/OBTerritoryController" to="." method="_on_ob_territory_controller_item_selected"]
[connection signal="item_selected" from="PanelContainer/GridContainer/OBTerritory" to="." method="_on_ob_territory_item_selected"]
[connection signal="button_up" from="PanelContainer/GridContainer/ButtonGenPRV" to="." method="_on_button_gen_prv_button_up"]
